force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Account__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>