force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Applied__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Applied__c</fullName>
    <label>Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>