force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>