force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Memo__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Memo__c</fullName>
    <label>Memo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>