force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Financials</relationshipLabel>
    <relationshipName>Financials</relationshipName>
    <type>Lookup</type>
</CustomField>