force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Subtotal__c</fullName>
    <description>Transaction subtotal before any discounts, shipping cost, handling cost or tax.</description>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>