force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Tax_Total__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Tax_Total__c</fullName>
    <description>Tax subtotal.</description>
    <label>Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>