force-app/main/default/objects/netsuite_conn__NetSuite_Financial__c/fields/netsuite_conn__Type__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Sale</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Cash Refund</fullName>
            </value>
            <value>
                <fullName>Customer Refund</fullName>
            </value>
            <value>
                <fullName>Customer Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>